--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+     <!--
+    - google font link
+  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     <title>Saiful Islam || Portfolio</title>
   </head>
   <body>
